--- a/TestSystemJS/TestSystemJS.csproj
+++ b/TestSystemJS/TestSystemJS.csproj
@@ -1789,6 +1789,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\system.js" />
+    <Content Include="Scripts\text.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
