SPA working with SystemJS

--- a/TestSystemJS/TestSystemJS.csproj
+++ b/TestSystemJS/TestSystemJS.csproj
@@ -1219,6 +1219,7 @@
     <Content Include="Content\kendo\2016.2.714-source\mobile\android\actionsheet.less" />
     <Content Include="Content\kendo\2016.2.714-source\common\transitions.less" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\aes.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\debug.js" />
