--- a/TestSystemJS/TestSystemJS.csproj
+++ b/TestSystemJS/TestSystemJS.csproj
@@ -137,9 +137,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app-build.js" />
     <Content Include="App\app.js" />
     <Content Include="App\config.js" />
+    <Content Include="App\config2.js" />
     <Content Include="App\main-built.js" />
     <Content Include="App\main.js" />
     <Content Include="App\vendor\kendo\kendo.js" />
